[package]
name = "direct_http"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Bartolini <pedrobartolini@outlook.com>"]
repository = "https://github.com/pedrobartolini/direct_http"
description = "An simple and low-level rust REST API library."
license = "MIT"
include = [
    "src/*.rs",
    "Cargo.toml",
]

[lib]
name = "direct_http"
path = "./src/direct_http.rs"


[dependencies]
serde_json = "1.0.108"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.33.0"
features = ["full"]
